aded entry value types